# chrono-sub

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.md  feature_request.md
.github/workflows/: release.yml
src/: args.rs  io.rs  lib.rs  main.rs  subtitle.rs
src/subtitle/: encoding.rs  mod.rs  prompt.rs  time.rs  transform.rs
wix/: main.wxs
