[package]
name = "chrono-sub"
version = "0.1.0"
edition = "2024"
description = "An intuitive CLI tool for synchronizing subtitle files with millisecond precision"
authors = ["Irwnda"]
license = "MIT"
repository = "https://github.com/Irwnda/chrono-sub"
readme = "README.md"
keywords = ["subtitle", "srt", "vtt", "timestamp", "synchronization"]
categories = ["command-line-utilities", "parser-tools"]
homepage = "https://github.com/Irwnda/chrono-sub"

[dependencies]
crossterm = "0.29.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
inquire = "0.9.4"
regex = "1.12.4"
